--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1>Odin Recipes</h1>
     <ul>
         <li><a href="recipes/lasagna.html">Lasagna</a></li>
-        <li><a href="recipes/"></a></li>
+        <li><a href="recipes/macaroni_and_cheese.html"></a>Macaroni and Cheese</li>
         <li></li>
     </ul>
 </body>
