--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <h1>Odin Recipes</h1>
     <ul>
         <li><a href="recipes/lasagna.html">Lasagna</a></li>
-        <li><a href="recipes/macaroni_and_cheese.html"></a>Macaroni and Cheese</li>
-        <li></li>
+        <li><a href="recipes/macaroni_and_cheese.html">Macaroni and Cheese</a></li>
+        <li><a href="recipes/broccoli_salad.html">Broccoli Salad</a></li>
     </ul>
 </body>
 </html>
